LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Event__c/fields/zoom_app__IsExternal__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__IsExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExternal</label>
    <type>Checkbox</type>
</CustomField>