LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Event__c/fields/zoom_app__Participants__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Participants__c</fullName>
    <label>Participants</label>
    <type>TextArea</type>
</CustomField>