LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Event__c/fields/zoom_app__Send_Email__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Send_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>