LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Event__c/fields/zoom_app__Zoom_Meeting_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Zoom_Meeting_Creation_Status__c</fullName>
    <label>Zoom Meeting Creation Status</label>
    <type>TextArea</type>
</CustomField>