LinKreta_POC_Repository/force-app/main/default/objects/zoom_app__Zoom_Event__c/fields/zoom_app__Zoom_Meeting_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Zoom_Meeting_Start_Time__c</fullName>
    <label>Zoom Meeting Start Time</label>
    <type>DateTime</type>
</CustomField>